@@ -1,3 +1,7 @@
+2003-09-21  Chris Schwerdt <muti@afterglo.ws> 1.4.1-cvs-b82
+
+	* Bumped version of gallery remote for previous changes.
+
 2003-09-20  Bharat Mediratta  <bharat@menalto.com> 1.4.1-cvs-b81
 
 	* Fixed a typo in the hungarian aliases in nls.php.  Added more aliases
